syntax = "proto3";
option go_package = "kudejen/resource-service";


message CreateRequest {
  string name = 1;
  string user = 2;
  string password = 3;
  string databaseName = 4;
}

message UpdateRequest {
  string name = 1;
  int32 replicas = 2;
}

message DeleteRequest {
  string name = 1;
}

message KeyValueItem {
  string Key = 1;
  string value = 2;
}
message Response {
  string message = 1;
  repeated KeyValueItem payload = 2;

}
message HealthCheckResponse {
  enum ServingStatus {
    UNKNOWN = 0;
    SERVING = 1;
    NOT_SERVING = 2;
    SERVICE_UNKNOWN = 3;  // Used only by the Watch method.
  }
  ServingStatus status = 1;
}

message HealthCheckRequest {
  string service = 1;

}
service ResourceGenerator {
  rpc Create(CreateRequest) returns (Response);
  rpc Update(UpdateRequest) returns (Response);
  rpc Delete(DeleteRequest) returns (Response);
  rpc Check(HealthCheckRequest) returns (HealthCheckResponse);
}